# schema_composition_service

./: .env.test  .gitignore  CHANGELOG.md  Makefile  README.md  current_agent_task_status.json  db_log.txt  docker-compose.test.yml  docker-compose.yml  main_api.py  pyproject.toml  pytest.ini  runlog.txt  schema_model_alignment_report.md
app/ai/agents/: simple_agent.py
app/api/: __init__.py  error_handlers.py
app/api/routes/: __init__.py  component_panel.py  component_panel_field.py  field_def_option.py  form.py  form_panel_component.py  form_panel_field.py  form_submission.py  my_entity.py
app/core/: celery_app.py  config.py  db.py  logging.py  telemetry.py
app/domain/models/: __init__.py  base.py  component.py  component_panel.py  component_panel_field.py  field_def.py  field_def_option.py  form.py  form_catalog_category.py  form_panel.py  form_panel_component.py  form_panel_field.py  form_submission.py  form_submission_archive.py  form_submission_value.py  form_submission_value_archive.py
app/domain/schemas/: __init__.py  common.py  component.py  field_def.py  field_def_option.py  form.py  health.py  json_patch.py  my_entity.py
app/domain/schemas/events/: __init__.py  common.py  component_events.py  component_panel_events.py  component_panel_field_events.py  field_def_option_events.py  form_panel_component_events.py  form_panel_field_events.py  form_submission_events.py
app/domain/services/: __init__.py  component_panel_service.py  field_def_option_service.py  field_def_service.py  form_catalog_category_service.py  form_panel_service.py  form_submission_value_service.py  health_service.py  my_entity_service.py
app/messaging/producers/: component_panel_field_producer.py  component_panel_producer.py  component_producer.py  field_def_option_producer.py  field_def_producer.py  form_catalog_category_producer.py  form_panel_component_producer.py  form_panel_field_producer.py  form_panel_producer.py  form_producer.py  form_submission_producer.py  form_submission_value_producer.py  my_entity_producer.py
app/messaging/tasks/: __init__.py  component_panel_field_tasks.py  component_panel_tasks.py  component_tasks.py  field_def_option_tasks.py  field_def_tasks.py  form_catalog_category_tasks.py  form_panel_component_tasks.py  form_panel_field_tasks.py  form_panel_tasks.py  form_submission_tasks.py  form_submission_value_tasks.py  form_tasks.py  my_entity_tasks.py
app/util/: __init__.py  jwt_util.py  liquibase.py
design/: readme_prompt.md
design/analysis/: messaging.md  migrations.md  models.md  routes.md  schemas.md  services.md  tests.md
docker/api/: Dockerfile
docker/otel/: otel-collector-config.yml
docker/postgres/: init-database.sql
migrations/liquibase/: changelog-root.xml  docker-liquibase.properties  liquibase.properties  test-liquibase.properties
migrations/liquibase/sql/: 001_init_schema.sql  003_create_field_def.sql  005_create_component.sql  007_create_component_panel_field.sql  010_create_form_panel_component.sql  011_create_form_panel_field.sql  012_create_form_submission.sql
tests/: test_otel_collector_config.py  test_telemetry_resource_merge.py
tests/ai/: test_simple_agent.py
tests/api/: test_component_panel_field.py  test_field_def_option.py  test_form_catalog_category.py  test_form_panel.py  test_form_panel_field.py  test_form_submission_value.py  test_health.py  test_my_entity.py
tmp/project/: .gitignore  Makefile  main_api.py
tmp/project/app/core/: logging.py  telemetry.py
tmp/project/app/util/: correlation.py
tmp/project/docker/otel/: otel-collector-config.yml
tmp/project/docker/worker/: Dockerfile
tmp/project/migrations/liquibase/: changelog-root.xml  docker-liquibase.properties  liquibase.properties  test-liquibase.properties
tmp/project/tests/: conftest.py
tmp/project/tests/ai/: test_simple_agent.py
tmp/project/tests/api/: test_component.py  test_component_panel.py  test_field_def.py  test_form.py  (+2 more)
(+61 files in other folders)
